--- a/views/pages/admin/customers/create.ejs
+++ b/views/pages/admin/customers/create.ejs
@@ -12,7 +12,7 @@
               <div class="form-group form-show-validation row">
                 <label for="companyId" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Company </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <select id="companyId" name="companyId" class=" form-control " required>
+                  <select id="companyId" name="companyId" class="form-control" required>
                     <option value='9to5'>9to5</option>
                     <option value='pmb'>Post Boxes</option>
                   </select>
@@ -46,15 +46,13 @@
               <div class="form-group form-show-validation row">
                 <label for="email" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Email address </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com"
-                    required>
+                  <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
                 </div>
               </div>
               <div class="form-group form-show-validation row">
                 <label for="password" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Password </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <input type="password" class="form-control" id="password" name="password" placeholder="New Password"
-                    required>
+                  <input type="password" class="form-control" id="password" name="password" placeholder="New Password">
                 </div>
               </div>
               <div class="form-group form-show-validation row">
@@ -62,7 +60,7 @@
                 </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <input type="password" class="form-control" id='confirmPassword' name="confirmPassword"
-                    placeholder="Confirm New Password" required>
+                    placeholder="Confirm New Password">
                 </div>
               </div>
               <div class="form-group form-show-validation row">
