--- a/views/pages/admin/customers/edit.ejs
+++ b/views/pages/admin/customers/edit.ejs
@@ -9,34 +9,30 @@
         <div class="card-body">
           <input type="hidden" id="id" name="id" value="<%=customer.id%>">
           <div class="form-group form-show-validation row">
-            <label for="pmb" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">PMB
-              <span class="required-label">*</span></label>
+            <label for="pmb" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">PMB</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
               <input type="number" class="form-control" id="pmb" name="pmb" placeholder="PMB" required
                 value="<%=customer.pmb%>">
             </div>
           </div>
           <div class="form-group form-show-validation row">
-            <label for="firstName" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">First Name
-              <span class="required-label">*</span></label>
+            <label for="firstName" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">First Name</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
               <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" required
                 value="<%=customer.firstName%>">
             </div>
           </div>
           <div class="form-group form-show-validation row">
-            <label for="lastName" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Last Name
-              <span class="required-label">*</span></label>
+            <label for="lastName" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Last Name</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" required
+              <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name"
                 value="<%=customer.lastName%>">
             </div>
           </div>
           <div class="form-group form-show-validation row">
-            <label for="email" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Email address
-              <span class="required-label">*</span></label>
+            <label for="email" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Email address</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required
+              <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com"
                 value="<%=customer.email%>">
             </div>
           </div>
@@ -48,10 +44,9 @@
             </div>
           </div>
           <div class="form-group form-show-validation row">
-            <label for="location" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Select Location
-              <span class="required-label">*</span></label>
+            <label for="location" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Select Location</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
-              <select id="location" name="location" class=" form-control " required>
+              <select id="location" name="location" class="form-control">
                 <% locations.forEach(location => { %>
                 <option value='<%=location.id%>' <% if(customer.location == location.id) { %> selected <% } %>>
                   <%=location.name%></option>
