--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -48,6 +48,8 @@
                       <% } %>
                     </td> -->
                     <td class="text-center">
+                      <a href='manage/<%=awb.id%>/get' class="btn btn-link btn-primary px-3" data-toggle="tooltip"
+                        data-original-title="Edit"> <i class="fa fa-pencil"></i> </a>
                       <a class="btn btn-link btn-danger btn-rm-awb p-1" data-toggle="modal" data-id="<%=awb.id%>"
                         data-target="#confirm-delete-awb"> <i class="fa fa-trash"></i> </a>
                       <a class="btn btn-link btn-primary btn-print-awb p-1" data-toggle="modal" data-id="<%=awb.id%>"
