--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -226,8 +226,19 @@
 						<p>Hazmat </p>
 					</a>
 				</li>
+				<li class="nav-item <% if (page.includes('/service-charges/')) { %> active <% } %>">
+					<a href="/warehouse/service-charge/list">
+						<i class="fa fa-exclamation-triangle"></i>
+						<p>Service Charges </p>
+					</a>
+				</li>
+				<li class="nav-item <% if (page.includes('/paid-types/')) { %> active <% } %>">
+					<a href="/warehouse/paid-types/list">
+						<i class="fa fa-credit-card"></i>
+						<p>Paid Types </p>
+					</a>
+				</li>
 				<% } %>
-
 				<!-- Account Options -->
 				<li class="nav-section">
 					<span class="sidebar-mini-icon">
