VZ9-80 change ID to Number

--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -21,7 +21,7 @@
                   <tr>
                     <th>Date Received</th>
                     <th>PMB</th>
-                    <th>AWB ID</th>
+                    <th>AWB Number</th>
                     <th>Consignee</th>
                     <th>Shipper</th>
                     <th>Carrier</th>
@@ -68,7 +68,7 @@
                   <tr>
                     <th>Date Received</th>
                     <th>PMB</th>
-                    <th>AWB ID</th>
+                    <th>AWB Number</th>
                     <th>Consignee</th>
                     <th>Shipper</th>
                     <th>Carrier</th>
