--- a/views/pages/warehouse/awb/no-docs.ejs
+++ b/views/pages/warehouse/awb/no-docs.ejs
@@ -11,7 +11,7 @@
             <tr>
               <th>Date Received</th>
               <th>PMB</th>
-              <th>AWB ID</th>
+              <th>AWB Number</th>
               <th>Consignee</th>
               <th>Shipper</th>
               <th>Carrier</th>
