--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -232,8 +232,8 @@
 						<p>Service Charges </p>
 					</a>
 				</li>
-				<li class="nav-item <% if (page.includes('/paid-types/')) { %> active <% } %>">
-					<a href="/warehouse/paid-types/list">
+				<li class="nav-item <% if (page.includes('/paid-type/')) { %> active <% } %>">
+					<a href="/warehouse/paid-type/list">
 						<i class="fa fa-credit-card"></i>
 						<p>Paid Types </p>
 					</a>
