--- a/views/pages/warehouse/paid-type/list.ejs
+++ b/views/pages/warehouse/paid-type/list.ejs
@@ -19,11 +19,11 @@
             <tbody>
               <% paidTypes.forEach(function(paidType){%>
               <tr data-record="<%= paidType.id %>">
-                <!-- <td><%=carrier.id%></td> -->
+                <!-- <td><%=paidType.id%></td> -->
                 <td><strong><%=paidType.name%></strong></td>
                 <td>
                   <a href='manage/<%=paidType.id%>/get'><i class="fas fa-pen"></i></a>
-                  <a href='#' class='rm-paid-type ml-3' data-id='<%=ppaidType.id%>'><i class="fas fa-trash"></i></a>
+                  <a href='#' class='rm-paid-type ml-3' data-id='<%=paidType.id%>'><i class="fas fa-trash"></i></a>
                 </td>
               </tr>
               <%})%>
