--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -214,6 +214,12 @@
 						<p>Shippers </p>
 					</a>
 				</li>
+				<li class="nav-item <% if (page.includes('/airline/')) { %> active <% } %>">
+					<a href="/warehouse/airline/list">
+						<i class="fa fa-plane-departure"></i>
+						<p>Airlines </p>
+					</a>
+				</li>
 				<li class="nav-item <% if (page.includes('/carrier/')) { %> active <% } %>">
 					<a href="/warehouse/carrier/list">
 						<i class="fa fa-people-carry"></i>
