--- a/views/pages/warehouse/airline/edit.ejs
+++ b/views/pages/warehouse/airline/edit.ejs
@@ -1,5 +1,5 @@
 <% layout('./shared/__template')%>
-<form id="add-shipper-form" method='POST' action='update'>
+<form id="add-airline-form" method='POST' action='update'>
   <div class="row gutters">
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
       <div class="card">
