--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -72,7 +72,7 @@
               <div class="form-group form-show-validation row">
                 <label for="awbNotes" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Notes</label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <textarea type='text' class='form-control' id='note' name='note' required></textarea>
+                  <textarea type='text' class='form-control' id='note' name='note'></textarea>
                 </div>
               </div>
               <div class='form-group'>
@@ -84,7 +84,7 @@
               <div class="form-group form-show-validation row">
                 <label for="invoiceNumber" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Invoice #</label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <input type='text' class='form-control' id='invoiceNumber' name='invoiceNumber' required />
+                  <input type='text' class='form-control' id='invoiceNumber' name='invoiceNumber'  />
                 </div>
               </div>
               <div class="form-group form-show-validation row">
