--- a/views/pages/warehouse/shipper/edit.ejs
+++ b/views/pages/warehouse/shipper/edit.ejs
@@ -51,7 +51,7 @@
             <label for="address" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Address</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
               <input type="text" class="form-control" id="address" name="address" placeholder="Address"
-                value="<%=shipper.address%>">
+                value="<%=shipper.address%>" required>
             </div>
           </div>
           <div class="form-group form-show-validation row">
