--- a/views/pages/warehouse/carrier/edit.ejs
+++ b/views/pages/warehouse/carrier/edit.ejs
@@ -34,10 +34,10 @@
             </div>
           </div>
           <div class="form-group form-show-validation row">
-            <label for="fax" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Fax</label>
+            <label for="fax" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Tax ID</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="tel" class="form-control" id="fax" name="fax" placeholder="(xxx)-xxx-xxxx"
-                value="<%=carrier.fax%>">
+              <input type="tel" class="form-control" id="shipper-tax" name="tax" placeholder="xxx-xxx-xxxx"
+                value="<%=carrier.tax%>">
             </div>
           </div>
           <div class="form-group form-show-validation row">
