--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -218,12 +218,10 @@
           <div class='form-group row'>
             <label for="shipper-firstName" class="col-md-3 mt-sm-2 text-right">Contact Name</label>
             <div class="col-md-4">
-              <input type='text' class='form-control' placeholder="First Name" id='shipper-firstName' name="firstName"
-                required />
+              <input type='text' class='form-control' placeholder="First Name" id='shipper-firstName' name="firstName" />
             </div>
             <div class="col-md-4">
-              <input type='text' class='form-control' placeholder="Last Name" id='shipper-lastName' name="lastName"
-                required />
+              <input type='text' class='form-control' placeholder="Last Name" id='shipper-lastName' name="lastName" />
             </div>
           </div>
           <div class='form-group row'>
@@ -236,8 +234,7 @@
           <div class='form-group row'>
             <label for="shipper-email" class="col-md-3 mt-sm-2 text-right">Email</label>
             <div class="col-md-8">
-              <input type="email" class='form-control' placeholder="name@example.com" id='shipper-email' name="email"
-                required />
+              <input type="email" class='form-control' placeholder="name@example.com" id='shipper-email' name="email" />
             </div>
           </div>
           <div class='form-group row'>
@@ -300,12 +297,10 @@
           <div class='form-group row'>
             <label for="carrier-firstName" class="col-md-3 mt-sm-2 text-right">Contact Name</label>
             <div class="col-md-4">
-              <input type='text' class='form-control' placeholder="First Name" id='carrier-firstName' name="firstName"
-                required />
+              <input type='text' class='form-control' placeholder="First Name" id='carrier-firstName' name="firstName" />
             </div>
             <div class="col-md-4">
-              <input type='text' class='form-control' placeholder="Last Name" id='carrier-lastName' name="lastName"
-                required />
+              <input type='text' class='form-control' placeholder="Last Name" id='carrier-lastName' name="lastName" />
             </div>
           </div>
           <div class='form-group row'>
@@ -440,8 +435,7 @@
               <div class="form-group form-show-validation row">
                 <label for="firstName" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">First Name </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name"
-                         required>
+                  <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" />
                 </div>
               </div>
               <div class="form-group form-show-validation row">
