--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -226,6 +226,12 @@
 						<p>Carriers </p>
 					</a>
 				</li>
+				<li class="nav-item <% if (page.includes('/container/')) { %> active <% } %>">
+					<a href="/warehouse/container/list">
+						<i class="fa fa-archive"></i>
+						<p>Containers </p>
+					</a>
+				</li>
 				<li class="nav-item <% if (page.includes('/hazmat/')) { %> active <% } %>">
 					<a href="/warehouse/hazmat/list">
 						<i class="fa fa-exclamation-triangle"></i>
