--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -169,6 +169,13 @@
         <input type='number' class='form-control' id='weight' name='weight' step="0.01" required />
       </div>
       <div class='form-group'>
+        <label for="packageType">Package calculation</label>
+        <select class='form-control' id='packageCalculation' name="packageCalculation" required>
+          <option>kg</option>
+          <option>lbs</option>
+        </select>
+      </div>
+      <div class='form-group'>
         <label for="packageType">Package Type</label>
         <select class='form-control' id='packageType' name="packageType" required>
           <option></option>
