Add all packages view

--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -133,6 +133,7 @@
                     <td><strong>Description</strong></td>
                     <td class="text-center"><strong>Dimension</strong></td>
                     <td class="text-right"><strong>Weight</strong></td>
+                    <td class="text-center"><strong>Status</strong></td>
                     <td></td>
                   </tr>
                 </thead>
