--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -219,6 +219,12 @@
 						<p>Shippers </p>
 					</a>
 				</li>
+				<li class="nav-item <% if (page.includes('/packages/')) { %> active <% } %>">
+					<a href="/warehouse/package/list">
+						<i class="fa fa-cubes"></i>
+						<p>Packages </p>
+					</a>
+				</li>
 				<li class="nav-item <% if (page.includes('/airline/')) { %> active <% } %>">
 					<a href="/warehouse/airline/list">
 						<i class="fa fa-plane-departure"></i>
