--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -130,6 +130,7 @@
               <table id='packageTable' class='display table table-striped table-hover w-100'>
                 <thead>
                   <tr>
+                    <td><strong>Tracking No</strong></td>
                     <td><strong>Description</strong></td>
                     <td class="text-center"><strong>Dimension</strong></td>
                     <td class="text-right"><strong>Weight</strong></td>
