--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -117,6 +117,44 @@
           </div>
           <div class="separator-solid"></div>
           <div class="d-flex mr-1">
+            <h3 class="card-title text-muted">AWB Purchase Order List</h3>
+          </div>
+          <div class="row">
+            <div class="table-responsive mx-5 mt-3">
+              <table id='packageTable' class='display table table-striped table-hover w-100'>
+                <thead>
+                  <tr>
+                    <td><strong>Source</strong></td>
+                    <td class="text-center"><strong>PaidType</strong></td>
+                    <td class="text-right"><strong>Note</strong></td>
+                    <td class="text-right"><strong>Service Types</strong></td>
+                    <th>Action</th>
+                  </tr>
+                </thead>
+                <tbody id='awbpoTableBody'>
+                  <% awbpos.forEach(awbpo => { %>
+                    <tr value="<%=awbpo.id%>">
+                      <td><%=awbpo.source%></td>
+                      <td><%=awbpo.paidType%></td>
+                      <td><%=awbpo.note%></td>
+                      <td>
+                        <% for (var i =0; i < (Object.keys(awbpo).length-4)/2;  i++ ) { %>
+                          <% if(awbpo['serviceTypes['+i+'][charge]'] !== 'empty'){ %>
+                            <option value="<%=i%>"><%=awbpo['serviceTypes['+i+'][charge]']+ ' / ' +awbpo['serviceTypes['+i+'][amount]']%></option>
+                         <% } %>
+                        <% } %>
+                      </td>
+                      <td>
+                        <a class="editpo" href='' data-toggle="modal" data-edit-id="<%=awbpo.id%>" data-target="#add-purchase-order-popup"><i class="fas fa-pen"> </i></a>
+                      </td>
+                    </tr>
+                    <%})%>
+                </tbody>
+              </table>
+            </div>
+          </div>         
+          <div class="separator-solid"></div>
+          <div class="d-flex mr-1">
             <h3 class="card-title text-muted">Packages - <span class='package-info'>0 Pieces / 0.00 lbs</span></h3>
             <a href="#add-package-popup" class="btn btn-info btn-round btn-add-package ml-auto mr-5">Add
               Package</a>
@@ -562,10 +600,9 @@
                 <label for="po-paid-type">Paid For By</label>
                 <select id="po-paid-type" name="paid-type" class="form-control" required>
                   <option></option>
-                  <option>Colin Credit Card</option>
-                  <option>Lavonda Credit Card</option>
-                  <option>Lavonda Credit Card</option>
-                  <option>Other</option>
+                  <option value="Colin">Colin Credit Card</option>
+                  <option value="Lavonda">Lavonda Credit Card</option>
+                  <option value="Other">Other</option>
                 </select>
               </div>
             </div>
@@ -573,10 +610,26 @@
           <hr>
           <div class="form-group">
             <div class="row">
-              <div class="col-md-6"> <label>Charge</label>
-                <input type="text" class="form-control " id="charge-name"></div>
-              <div class="col-md-6"> <label>Amount</label>
-                <input type="text" class="form-control " id="charge-amount"></div>
+
+              <div class="col-md-6">
+                <label for="serviceTypeCharge">Charge </label>
+                <select class="form-control" id="serviceTypeCharge" name="serviceTypeCharge" required>
+                  <option></option>
+                  <% serviceTypes.forEach(serviceType => { %>
+                  <option value="<%=serviceType.id%>"><%=serviceType.name%></option>
+                  <% }) %>
+                </select>
+              </div>
+              <div class="col-md-6">
+                <label for="serviceTypeAmount">Amount</label>
+                <select id="serviceTypeAmount" name="serviceTypeAmount" class="form-control" required>
+                  <option></option>
+                  <% serviceTypes.forEach(serviceType => { %>
+                  <option value="<%=serviceType.id%>"><%=serviceType.amount%></option>
+                  <% }) %>
+                </select>
+              </div>
+
             </div>
           </div>
           <div class="form-group">
@@ -598,12 +651,6 @@
                 </tr>
               </thead>
               <tbody id="charge-table-body">
-                <tr>
-                  <td class="charge">Pickup</td>
-                  <td class="amount">$1</td>
-                  <td><i style="cursor:pointer" data-index="0" class="fa fa-edit edit-po-item"></i> <i
-                      style="cursor:pointer" class="fa fa-trash rm-po-item"></i></td>
-                </tr>
               </tbody>
             </table>
           </div>
@@ -611,7 +658,9 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger close-del" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Create PO</button>
+        <div id="buttonPO">
+          <button type="button" id="createPo" class="btn btn-primary">Create PO</button>         
+        </div>
       </div>
     </div>
   </div>
