--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -255,6 +255,12 @@
 						<p>Service Charges </p>
 					</a>
 				</li>
+				<li class="nav-item <% if (page.includes('/service-type/')) { %> active <% } %>">
+					<a href="/warehouse/service-type/list">
+						<i class="fa fa-black-tie"></i>
+						<p>Service Types </p>
+					</a>
+				</li>
 				<li class="nav-item <% if (page.includes('/paid-type/')) { %> active <% } %>">
 					<a href="/warehouse/paid-type/list">
 						<i class="fa fa-credit-card"></i>
