Add volumetric weight to packages

--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -133,7 +133,8 @@
                     <td><strong>Tracking No</strong></td>
                     <td><strong>Description</strong></td>
                     <td class="text-center"><strong>Dimension</strong></td>
-                    <td class="text-right"><strong>Weight</strong></td>
+                    <td class="text-center"><strong>Weight</strong></td>
+                    <td class="text-center"><strong>Volumetric Weight</strong></td>
                     <td class="text-center"><strong>Status</strong></td>
                     <td></td>
                   </tr>
