--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -14,6 +14,7 @@
               <th>Description</th>
               <th>Type</th>
               <th>Weight</th>
+              <th>Volumetric Weight</th>
               <th>Dimensions</th>
               <th>Status</th>
               <th>AWB</th>
@@ -27,6 +28,7 @@
               <td><%= pkg.description %></td>
               <td><%= pkg.packageType %></td>
               <td><%= pkg.weight%></td>
+              <td><%= helpers.calculatePackageVolumetricWeight(pkg).toFixed(2) %> lbs</td>
               <td><%= pkg.dimensions %></td>
               <td><%= pkg.lastStatusText %></td>
               <td><%= pkg.awbId %></td>
@@ -67,4 +69,5 @@
 </div>
 
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.2.0/sweetalert2.all.min.js"></script> -->
+<% block('scripts').append('<script src="/js/utils.js"></script>')%> 
 <% block('scripts').append('<script src="/js/warehouse/package/list.js"></script>')%>
