--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -70,6 +70,15 @@
                 </div>
               </div>
               <div class="form-group form-show-validation row">
+                <label for="awb-isSed" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">SED</label>
+                <div class="col-lg-8 col-md-8 col-sm-8">
+                  <select id="awb-isSed" name="isSed" class='form-control' style='width:90%;'>
+                    <option value="0" selected>No</option>
+                    <option value="1">Yes</option>
+                  </select>
+                </div>
+              </div>
+              <div class="form-group form-show-validation row">
                 <label for="awbNotes" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Notes</label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <textarea type='text' class='form-control' id='note' name='note'></textarea>
