VZ9-100 Re-label customer to consignee

--- a/views/pages/admin/customers/list.ejs
+++ b/views/pages/admin/customers/list.ejs
@@ -4,7 +4,7 @@
     <div class="card">
       <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
         <div class="card-title"><%=title%></div>
-        <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add Customer</a>
+        <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add Consignee</a>
       </div>
       <div class="card-body">
         <div class="table-responsive">
