--- a/views/pages/warehouse/fll-add-package.ejs
+++ b/views/pages/warehouse/fll-add-package.ejs
@@ -55,7 +55,7 @@
                                                 href="#" class=" " data-target='#findCustomer'
                                                 data-toggle='modal'>Assign Box(9-5) or PB</a> | <a
                                                 href="javascript:void(0)" data-toggle="modal"
-                                                data-target="#addCustomer">Add New Customer</a></label>
+                                                data-target="#addCustomer">Add New Consignee</a></label>
                                         <input type='text' class='form-control skybox' id="customerName" name='pmb'
                                             required readonly value='<%=awb.customer.name%>' />
                                         <input type='hidden' class='customerId' id='customerId'
