--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -58,7 +58,7 @@
 				<li class="nav-item <% if (page.includes('/customers/')) { %> active <% } %>">
 					<a href="/admin/customers/list">
 						<i class="fa fa-user-tie"></i>
-						<p>Customers</p>
+						<p>Consignee</p>
 					</a>
 				</li>
 				<li class="nav-item <% if (page.includes('/locations/')) { %> active <% } %>">
