--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -396,7 +396,7 @@
     <div class="modal-content">
       <form method="POST" id="add-customer-form">
         <div class="modal-header">
-          <h2 class="modal-title" id="exampleModalLabel2">Add New Customer</h2>
+          <h2 class="modal-title" id="exampleModalLabel2">Add New Consignee</h2>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
           </button>
@@ -553,7 +553,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger close-del" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary">Add Customer</button>
+          <button type="submit" class="btn btn-primary">Add Consignee</button>
         </div>
       </form>
     </div>
