VZ9-103 Add package id to package tables

--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -139,6 +139,7 @@
               <table id='packageTable' class='display table table-striped table-hover w-100'>
                 <thead>
                   <tr>
+                    <td><strong>Number</strong></td>
                     <td><strong>Tracking No</strong></td>
                     <td><strong>Description</strong></td>
                     <td class="text-center"><strong>Dimension</strong></td>
