--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -79,6 +79,16 @@
                 </div>
               </div>
               <div class="form-group form-show-validation row">
+                <label for="awb-deliveryMethod" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Delivery or Pickup</label>
+                <div class="col-lg-8 col-md-8 col-sm-8">
+                  <select id="awb-deliveryMethod" name="deliveryMethod" class='form-control' data-placeholder="Select">
+                    <% [{ label: 'Delivery', value: '1' }, { label: 'Pickup', value: '2' }].forEach(option => { %>
+                      <option value="<%=option.value%>" <% if(typeof awb !== 'undefined' && awb.deliveryMethod == option.value) { %> selected <% } %>><%=option.label%></option>
+                    <%})%>
+                  </select>
+                </div>
+              </div>
+              <div class="form-group form-show-validation row">
                 <label for="awbNotes" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Notes</label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <textarea type='text' class='form-control' id='note' name='note'></textarea>
