VZ9-107 Make table scrollable on smaller screens

--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -31,7 +31,7 @@
         </button>
       </div>
       <div class="card-body">
-        <table class="display table table-striped table-hover dataTable package-table">
+        <table class="display table table-responsive table-striped table-hover dataTable package-table">
           <thead>
             <tr>
               <th></th>
