--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -7,7 +7,7 @@
         <!-- <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add User</a> -->
       </div>
       <div class="card-body">
-        <table class="display table table-striped table-hover dataTable package-table">
+        <table class="display table table-responsive table-striped table-hover dataTable package-table">
           <thead>
             <tr>
               <th>Number</th>
