--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -262,7 +262,7 @@
 				</li>
 				<li class="nav-item <% if (page.includes('/service-type/')) { %> active <% } %>">
 					<a href="/warehouse/service-type/list">
-						<i class="fa fa-black-tie"></i>
+						<i class="fa fa-wrench"></i>
 						<p>Service Types </p>
 					</a>
 				</li>
